--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -6,6 +6,8 @@ on:
 jobs:
   pr-check:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v2
       - uses: kuhnroyal/flutter-fvm-config-action@v1
@@ -15,7 +17,7 @@ jobs:
           flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: ${{ env.FLUTTER_CHANNEL }}
       - name: Run flutter analyze
-        run: flutter analyze > result.log
+        run: flutter analyze 2>&1 | tee result.log
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
